[gd_scene load_steps=4 format=2]

[ext_resource path="res://preset/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Navigation2D/FollowMeAgent.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 35.3553

[node name="KinematicBody2D" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="NavigationAgent2D" parent="." index="1"]
target_desired_distance = 90.0

[node name="Area2D" type="Area2D" parent="." index="3"]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 1 )

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_velocity_computed"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
